--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header {
 /* Start Content Container */
 .content {
 /* 	background-color: black; */
-	font-size: 1.25em;
+	font-size: 1.25rem;
 	line-height: 1.6;
 	width: 90%;
 	margin: 0 auto;
@@ -151,7 +151,7 @@ header {
 		font-family: 'Work Sans', sans-serif;
 		font-size: 1.5rem;
 		border-top: 1px solid black;
-		width: 250px;
+		width: 300px;
 		margin-top: 0;
 		margin-bottom: 2rem;
 		padding-top: 10px;
@@ -159,12 +159,121 @@ header {
 }
 /* End Content Container */
 
-.testPicture {
-	width: 250px;
+.profilePicture {
+	width: 100%;
+	max-width: 400px;
 	height: auto;
 	border: 1px solid #000;
-	float: left;
-	margin: 0 10px 10px 0;
+	margin: 1rem 0 0;
+	border-radius: 5px;
+}
+
+	@media (min-width: 900px) {
+		.profileInfo {
+			margin-top: 1rem;
+		}
+		
+			.profilePicture {
+				width: 250px;
+				float: left;
+				margin-right: 25px;
+				margin-top: 0;
+		/* 		margin-top: 0; */
+			}
+	}
+
+.twitchInfo {
+	margin-top: 5rem;
+	background-color: #262626;
+	border-radius: 5px;
+	padding: 1rem 2rem;
+	color: #fff;
+}
+
+.twitchInfo > img {
+/* 	margin: 1rem; */
+	display: block;
+	width: 195px;
+/* 	clear: both; */
+/* 	margin: 5rem auto 1rem;	 */
+	margin: 2rem auto 2rem;
+}
+
+.twitchInfo > p {
+	margin-top: 1rem;
+}
+
+.twitchProjects {
+	list-style-type: none;
+	margin-top: 1rem;
+}
+
+.twitchProjects > li {
+	display: inline-block;
+	border: 1px solid black;
+	width: 25%;
+	margin: 0 2%;
+}
+
+.twitchProjects img {
+	width: 100%;
+	border-radius: 5px;
+	margin: 0 auto;
+}
+
+@media (min-width: 900px) {
+	.twitchInfo {
+		margin-top: 5rem;
+		text-align: left;
+	}
+	
+		.twitchInfo > p {
+			margin-top: .5rem;
+		}
+	
+		.twitchInfo > img {
+			float: right;
+			margin-left: 25px;
+		}
+
+		.twitchProjects {
+/* 			float: right; */
+			display: inline-block;
+			width: 200px;
+			margin: 0;
+			clear: right;
+		}
+
+		.twitchProjects > li {
+			width: 25%;
+			margin: 0 2%;
+		}
+}
+
+.coursesInfo {
+	margin-top: 5rem;
+}
+
+	.coursesInfo > img {
+		width: 100%;
+		max-width: 400px;
+		height: auto;
+		border: 1px solid #000;
+		margin: 1rem 0;
+		border-radius: 5px;
+	}
+
+	.coursesInfo > p {
+		margin-top: 0;
+	}
+
+@media (min-width: 900px) {
+	.coursesInfo > img {
+		width: 250px;
+		float: left;
+		margin-right: 25px;
+		margin-top: 0;	
+	}
 }
 
 /* Start Portfolio Content */
@@ -190,11 +299,7 @@ header {
 	}
 
 	.external {
-/* 		display: inline-block;
-		border: 1px solid black;
-		height: auto; */
 		width: 100%;
-/* 		max-width: 225px; */
 		margin: 1rem 0;
 	}
 
@@ -203,9 +308,9 @@ header {
 			width: 20%;
 	}
 
-			.portfolio_display > li:nth-child(4) {
-				margin-right: 4%;
-			}
+		.external_mini:last-of-type {
+			margin-right: 4%;
+		}
 
 .projectTitle {
 	border-top: 1px solid black;
@@ -239,6 +344,25 @@ header {
 	
 }
 
+@media (min-width: 900px) {
+	.projectTitle {
+		text-align: left;
+		border-top: 0;
+		border-bottom: 0;
+	}
+	
+	.selectedProject {
+		width: 400px;
+/* 		text-align: left; */
+		float: left;
+		margin-right: 25px;
+	}
+	
+	.aboutProjectTitle {
+		display: none;
+	}
+}
+
 .languages {
 	margin: 0 auto;
 	text-align: left;
@@ -249,66 +373,186 @@ header {
 		border-radius: 10px;
 		padding: 5px;
 		margin-top: 5px;
+		margin-left: 25px;
 /* 		color: white; */
 		font-weight: bold;
 		letter-spacing: 1.5px;
+		position: relative;
 	}
+
+.languages > li:before {
+			display: inline-block;
+			width: 20px;
+			height: 20px;
+			margin-right: 5px;
+			content: "";
+			
+			background-size: 100%;
+			position: absolute;
+			top: 10px;
+			left: -20px;
+}
 
 .languages img {
 	width: 25px;
 }
 
 		.listHTML {
-/* 			list-style-image: url('img/icons/htmlicon.png'); */
-/* 				background-color: orange; */
 			}
+
 		.listHTML:before {
-			content: url('../img/icons/htmlicon.png');
+			background: url("../img/icons/htmlicon.png") no-repeat 0 0;
 		}
 	
 		.listCSS {
 /* 				background-color: #0066ff; */
 			}
 		.listCSS:before {
-			content: url('../img/icons/cssicon.png');
+/* 			content: url('../img/icons/cssicon.png'); */
+			background: url("../img/icons/cssicon.png") no-repeat 0 0;
 		}
 
 		.listJavaScript {
 /* 				background-color: #cccc00; */
 			}
 		.listJavaScript:before {
-			content: url('../img/icons/javascripticon.png');
+/* 			content: url('../img/icons/javascripticon.png'); */
+			background: url("../img/icons/javascripticon.png") no-repeat 0 0;
 		}
 
 		.listPHP {
 /* 				background-color: #6699ff; */
 			}
 		.listPHP:before {
-			content: url('../img/icons/phpicon.png');
+/* 			content: url('../img/icons/phpicon.png'); */
+			background: url("../img/icons/phpicon.png") no-repeat 0 0;
 		}
 
 		.listMySQL {
 /* 				background-color: #00618A; */
 			}
 		.listMySQL:before {
-			content: url('../img/icons/mysqlicon.png');
+/* 			content: url('../img/icons/mysqlicon.png'); */
+			background: url("../img/icons/mysqlicon.png") no-repeat 0 0;
 		}
 
-.backToTop {
+@media (min-width: 900px) {
+	.languagesTitle {
+		margin-top: 5rem;
+		text-align: left;
+	}
+	
+	.languages {
+		font-size: 0;
+	}
+	
+	.languages > li {
+		font-size: 1.25rem;
+		display: inline-block;
+		width: 17%;
+	}
+}
+
+.backToTopButton {
 	display: inline-block;
 	background-color: #fff;
-	padding: 10px;
+	padding: 5px 10px;
 	border-radius: 10px;
 	font-weight: bold;
 	letter-spacing: 1.5px;
-	margin-top: 20px;
+	margin-top: 3rem;
 	border: 1px solid #3E494F;
 }
-.backToTop:link, 
-.backToTop:visited, 
-.backToTop:hover, 
-.backToTop:active {
+.backToTopButton:link, 
+.backToTopButton:visited, 
+.backToTopButton:hover, 
+.backToTopButton:active {
 	color: #3E494F;
+}
+
+@media(min-width: 900px) {
+	.backToTopButton {
+		display: none;
+	}
+}
+
+.projectExternalLinks {
+	font-size: 0;
+	margin-top: 3rem;
+}
+
+.projectExternalLinks > li {
+	display: inline-block;
+	list-style-type: none;
+	width: 50%;
+	font-size: 1rem;
+/* 	font-size: 0; */
+}
+
+.liveSiteButton {
+	display: inline-block;
+	background-color: #ecb502;
+	padding: 10px;
+/* 	border-radius: 10px; */
+	font-weight: bold;
+	letter-spacing: 1.5px;
+/* 	margin-top: 20px; */
+	border: 1px solid #000;
+/* 	width: 50%; */
+/* 	font-size: 1rem; */
+	width: 100%;
+	border-top-left-radius: 5px;
+	border-bottom-left-radius: 5px;
+}
+.liveSiteButton:link, 
+.liveSiteButton:visited, 
+.liveSiteButton:hover, 
+.liveSiteButton:active {
+	color: #fff;
+}
+
+.githubButton {
+	display: inline-block;
+	background-color: #7d558f;
+	padding: 10px;
+/* 	border-radius: 10px; */
+	font-weight: bold;
+	letter-spacing: 1.5px;
+/* 	margin-top: 20px; */
+	border: 1px solid #000;
+/* 	width: 50%; */
+/* 	font-size: 1rem; */
+	width: 100%;
+	border-top-right-radius: 5px;
+	border-bottom-right-radius: 5px;
+}
+.githubButton:link, 
+.githubButton:visited, 
+.githubButton:hover, 
+.githubButton:active {
+	color: #fff;
+}
+
+@media (min-width: 900px) {
+	.projectExternalLinks {
+		margin-top: 4rem;
+	}
+	
+	.projectExternalLinks > li {
+		width: 40%;
+		margin: 0 5% 0;
+		border-radius: 5px;
+	}
+	
+	.liveSiteButton {
+		border-top-right-radius: 5px;
+		border-bottom-right-radius: 5px;
+	}
+	
+	.githubButton {
+		border-top-left-radius: 5px;
+		border-bottom-left-radius: 5px;
+	}
 }
 
 
@@ -381,12 +625,6 @@ input[type=submit]:hover {
 /* End Contact Content */
 
 
-	.clearfix::after {
-		display: block;
-		content: " ";
-		clear: both;
-	}
-
 /* Rules for sizing the icon. */
 
 .material-icons.md-18 { font-size: 18px; }
@@ -420,12 +658,18 @@ footer a:nth-child(1) {
 	
 	footer p {
 		border-top: 1px solid black;
-		width: 250px;
+		width: 300px;
 		text-align: right;
 		display: inline-block;
 		padding-top: 10px;
 	}
 }
+
+	.clearfix::after {
+		display: block;
+		content: " ";
+		clear: both;
+	}
 
 
 
